adicionadas arquitecturas big data

--- a/Hadoop-Spark Dockerizados/Fundamentos/Analitica/Analitica_Fundamentos.ipynb
+++ b/Hadoop-Spark Dockerizados/Fundamentos/Analitica/Analitica_Fundamentos.ipynb
@@ -45,6 +45,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# **Arquitecturas Big Data**\n",
+    "https://docs.microsoft.com/en-us/azure/architecture/data-guide/big-data/\n",
+    "\n",
+    "\n",
+    "# **Componentes**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"componentes-arquitectura.png\">\n",
+    "</div>\n",
+    "\n",
+    "\n",
+    "# **Lambda**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"lambda.png\">\n",
+    "</div>\n",
+    "\n",
+    "# **Kappa**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"kappa.png\">\n",
+    "</div>\n",
+    "\n",
+    "# **IOT**\n",
+    "<div style=\"text-align:center\">\n",
+    "    <img src=\"iot.png\">\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <center>**TIPOS DE PROCESAMIENTO**</center>\n",
     "<div style=\"text-align:center\">\n",
     "    <img src=\"tiempos-procesamiento.png\">\n",
