actualizados directorios de base de datos

--- a/Bases de datos/SQL/Fundamentos_SQL.ipynb
+++ b/Bases de datos/SQL/Fundamentos_SQL.ipynb
@@ -27607,12 +27607,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 195,
    "id": "0386a642-e13b-425e-94fd-181a8543e53c",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jorgecardona-mysql\n",
+      "jorgecardona-postgres\n"
+     ]
+    }
+   ],
    "source": [
     "!docker stop jorgecardona-mysql\n",
     "!docker stop jorgecardona-postgres"
@@ -27620,10 +27629,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 196,
    "id": "5582fd52-6f21-451f-af2c-f2ec3a067a17",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CONTAINER ID   IMAGE                                             COMMAND                  CREATED       STATUS                    PORTS     NAMES\n",
+      "09d57ee27dd7   gcr.io/k8s-staging-gateway-api/admission-server   \"/gateway-api-webhooâ€¦\"   3 hours ago   Up 3 hours                          k8s_webhook_gateway-api-admission-server-f849f547f-zxjcp_gateway-system_d378c31d-b859-40e5-829c-361f7b0162b4_89\n",
+      "532c4abf2e2a   17224fe760db                                      \"/bin/sh -c 'jupyterâ€¦\"   4 weeks ago   Exited (130) 2 days ago             lab\n"
+     ]
+    }
+   ],
    "source": [
     "!docker ps -a"
    ]
