ejemplos para inner join correctos adicionados

--- a/Pandas/Pandas.ipynb
+++ b/Pandas/Pandas.ipynb
@@ -11200,7 +11200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 151,
    "id": "01e91193-b844-475b-87eb-b139a280807c",
    "metadata": {
     "scrolled": true,
@@ -11210,7 +11210,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"885c8058-95c8-43bc-a8eb-2fc61d817725\" class=\"display\"style=\"max-width:100%\"><thead>\n",
+       "<table id=\"e3e82105-a185-4de6-9d62-329ad220c536\" class=\"display\"style=\"max-width:100%\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
        "      <th>Id</th>\n",
@@ -11259,7 +11259,7 @@
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            \n",
-       "            window.__itables_render('#885c8058-95c8-43bc-a8eb-2fc61d817725', dt_args);\n",
+       "            window.__itables_render('#e3e82105-a185-4de6-9d62-329ad220c536', dt_args);\n",
        "        });\n",
        "    }\n",
        "</script>\n"
@@ -11331,7 +11331,7 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"40e3e9a6-7e98-406f-b980-e319c852d859\" class=\"display\"style=\"max-width:100%\"><thead>\n",
+       "<table id=\"2f59891a-82db-4b40-bb3f-9740fa4a6920\" class=\"display\"style=\"max-width:100%\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Id_left</th>\n",
@@ -11386,7 +11386,7 @@
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            \n",
-       "            window.__itables_render('#40e3e9a6-7e98-406f-b980-e319c852d859', dt_args);\n",
+       "            window.__itables_render('#2f59891a-82db-4b40-bb3f-9740fa4a6920', dt_args);\n",
        "        });\n",
        "    }\n",
        "</script>\n"
@@ -11411,15 +11411,15 @@
        "14    Tollo cigarro          Morena  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 151,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataframe_inner = df3.head(20)\n",
-    "display(dataframe_inner)\n",
-    "join_dataframe(dataframe_inner, dataframe_inner, tipo_de_join='SELF',self_join=['Id','Lider']).dropna()"
+    "dataframe_self_join = df3.head(20)\n",
+    "display(dataframe_self_join)\n",
+    "join_dataframe(dataframe_self_join, dataframe_self_join, tipo_de_join='SELF',self_join=['Id','Lider']).dropna()"
    ]
   },
   {
