adicionado indice para nunique

--- a/Pandas/Pandas.ipynb
+++ b/Pandas/Pandas.ipynb
@@ -6186,7 +6186,7 @@
    ],
    "source": [
     "display(df_colores)\n",
-    "df2.nunique(axis=1, dropna=False)"
+    "df2.nunique(axis=1, dropna=False).reset_index(name='')"
    ]
   },
   {
