--- a/Pandas/Pandas.ipynb
+++ b/Pandas/Pandas.ipynb
@@ -6036,16 +6036,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
    "id": "b66a1a61-7017-4e89-b1d2-fa5420ec15ce",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
-       "<table id=\"d6590bc1-3c85-4a59-b99e-c731a674037f\" class=\"display\"style=\"max-width:100%\"><thead>\n",
+       "<table id=\"8ce7a297-6c33-42aa-a7b6-e08dce26b6d9\" class=\"display\"style=\"max-width:100%\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
+       "      <th>index</th>\n",
        "      <th>AMARILLO</th>\n",
        "      <th>AZUL</th>\n",
        "      <th>ROJO</th>\n",
@@ -6082,7 +6083,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[1.0, 5.0, 2.0, 4.0, 3.0], [NaN, NaN, NaN, NaN, 6.0], [2.0, NaN, 5.0, NaN, 9.0], [3.0, NaN, 10.0, NaN, 12.0], [NaN, NaN, 15.0, NaN, 15.0], [3.0, 10.0, 20.0, NaN, 18.0], [4.0, 15.0, 7.0, NaN, 21.0], [NaN, 20.0, 31.0, NaN, 24.0], [NaN, 25.0, NaN, NaN, 27.0], [1.0, NaN, NaN, NaN, 30.0]];\n",
+       "        const data = [[0.0, 1.0, 5.0, 2.0, 4.0, 3.0], [1.0, NaN, NaN, NaN, NaN, 6.0], [2.0, 2.0, NaN, 5.0, NaN, 9.0], [3.0, 3.0, NaN, 10.0, NaN, 12.0], [4.0, NaN, NaN, 15.0, NaN, 15.0], [5.0, 3.0, 10.0, 20.0, NaN, 18.0], [6.0, 4.0, 15.0, 7.0, NaN, 21.0], [7.0, NaN, 20.0, 31.0, NaN, 24.0], [8.0, NaN, 25.0, NaN, NaN, 27.0], [9.0, 1.0, NaN, NaN, NaN, 30.0]];\n",
        "\n",
        "        // Define the dt_args\n",
        "        let dt_args = {\"paging\": false, \"order\": []};\n",
@@ -6091,23 +6092,23 @@
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            \n",
-       "            window.__itables_render('#d6590bc1-3c85-4a59-b99e-c731a674037f', dt_args);\n",
+       "            window.__itables_render('#8ce7a297-6c33-42aa-a7b6-e08dce26b6d9', dt_args);\n",
        "        });\n",
        "    }\n",
        "</script>\n"
       ],
       "text/plain": [
-       "   AMARILLO  AZUL  ROJO  VERDE  ROSADO\n",
-       "0       1.0   5.0   2.0    4.0       3\n",
-       "1       NaN   NaN   NaN    NaN       6\n",
-       "2       2.0   NaN   5.0    NaN       9\n",
-       "3       3.0   NaN  10.0    NaN      12\n",
-       "4       NaN   NaN  15.0    NaN      15\n",
-       "5       3.0  10.0  20.0    NaN      18\n",
-       "6       4.0  15.0   7.0    NaN      21\n",
-       "7       NaN  20.0  31.0    NaN      24\n",
-       "8       NaN  25.0   NaN    NaN      27\n",
-       "9       1.0   NaN   NaN    NaN      30"
+       "   index  AMARILLO  AZUL  ROJO  VERDE  ROSADO\n",
+       "0      0       1.0   5.0   2.0    4.0       3\n",
+       "1      1       NaN   NaN   NaN    NaN       6\n",
+       "2      2       2.0   NaN   5.0    NaN       9\n",
+       "3      3       3.0   NaN  10.0    NaN      12\n",
+       "4      4       NaN   NaN  15.0    NaN      15\n",
+       "5      5       3.0  10.0  20.0    NaN      18\n",
+       "6      6       4.0  15.0   7.0    NaN      21\n",
+       "7      7       NaN  20.0  31.0    NaN      24\n",
+       "8      8       NaN  25.0   NaN    NaN      27\n",
+       "9      9       1.0   NaN   NaN    NaN      30"
       ]
      },
      "metadata": {},
@@ -6116,10 +6117,11 @@
     {
      "data": {
       "text/html": [
-       "<table id=\"75683bef-56d6-4a10-a8de-ddf6af4d8ed8\" class=\"display\"style=\"max-width:100%\"><thead>\n",
+       "<table id=\"ef975523-94c1-47a2-85db-0647f5bc5de7\" class=\"display\"style=\"max-width:100%\"><thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      \n",
-       "      <th>0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>Total por fila Excluyendo Null</th>\n",
        "    </tr>\n",
        "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
        "<style>\n",
@@ -6151,7 +6153,7 @@
        "    // to avoid conflicts between the various tables' data & dt_args\n",
        "    {\n",
        "        // Define the table data\n",
-       "        const data = [[5], [2], [4], [4], [2], [5], [5], [4], [3], [3]];\n",
+       "        const data = [[0, 5], [1, 1], [2, 3], [3, 3], [4, 1], [5, 4], [6, 4], [7, 3], [8, 2], [9, 2]];\n",
        "\n",
        "        // Define the dt_args\n",
        "        let dt_args = {\"paging\": false, \"order\": []};\n",
@@ -6160,33 +6162,103 @@
        "        // Display the table\n",
        "        $(document).ready(function () {\n",
        "            \n",
-       "            window.__itables_render('#75683bef-56d6-4a10-a8de-ddf6af4d8ed8', dt_args);\n",
+       "            window.__itables_render('#ef975523-94c1-47a2-85db-0647f5bc5de7', dt_args);\n",
        "        });\n",
        "    }\n",
        "</script>\n"
       ],
       "text/plain": [
-       "0    5\n",
-       "1    2\n",
-       "2    4\n",
-       "3    4\n",
-       "4    2\n",
-       "5    5\n",
-       "6    5\n",
-       "7    4\n",
-       "8    3\n",
-       "9    3\n",
-       "dtype: int64"
+       "   index  Total por fila Excluyendo Null\n",
+       "0      0                               5\n",
+       "1      1                               1\n",
+       "2      2                               3\n",
+       "3      3                               3\n",
+       "4      4                               1\n",
+       "5      5                               4\n",
+       "6      6                               4\n",
+       "7      7                               3\n",
+       "8      8                               2\n",
+       "9      9                               2"
       ]
      },
-     "execution_count": 85,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<table id=\"93357a8b-95c5-4d77-a97b-4d4a8ac4d2c0\" class=\"display\"style=\"max-width:100%\"><thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      \n",
+       "      <th>index</th>\n",
+       "      <th>Total por fila Incluyendo Null</th>\n",
+       "    </tr>\n",
+       "  </thead><tbody><tr><td>Loading... (need <a href=https://mwouts.github.io/itables/troubleshooting.html>help</a>?)</td></tr></tbody></table>\n",
+       "<style>\n",
+       "table td {\n",
+       "    text-overflow: ellipsis;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       "\n",
+       "table th {\n",
+       "    text-overflow: ellipsis;\n",
+       "    overflow: hidden;\n",
+       "}\n",
+       "\n",
+       "thead input {\n",
+       "    width: 100%;\n",
+       "    padding: 3px;\n",
+       "    box-sizing: border-box;\n",
+       "}\n",
+       "\n",
+       "tfoot input {\n",
+       "    width: 100%;\n",
+       "    padding: 3px;\n",
+       "    box-sizing: border-box;\n",
+       "}\n",
+       "\n",
+       "</style>\n",
+       "<script>\n",
+       "    // We use a namespace per table (= the next curly bracket)\n",
+       "    // to avoid conflicts between the various tables' data & dt_args\n",
+       "    {\n",
+       "        // Define the table data\n",
+       "        const data = [[0, 5], [1, 2], [2, 4], [3, 4], [4, 2], [5, 5], [6, 5], [7, 4], [8, 3], [9, 3]];\n",
+       "\n",
+       "        // Define the dt_args\n",
+       "        let dt_args = {\"paging\": false, \"order\": []};\n",
+       "        dt_args[\"data\"] = data;\n",
+       "\n",
+       "        // Display the table\n",
+       "        $(document).ready(function () {\n",
+       "            \n",
+       "            window.__itables_render('#93357a8b-95c5-4d77-a97b-4d4a8ac4d2c0', dt_args);\n",
+       "        });\n",
+       "    }\n",
+       "</script>\n"
+      ],
+      "text/plain": [
+       "   index  Total por fila Incluyendo Null\n",
+       "0      0                               5\n",
+       "1      1                               2\n",
+       "2      2                               4\n",
+       "3      3                               4\n",
+       "4      4                               2\n",
+       "5      5                               5\n",
+       "6      6                               5\n",
+       "7      7                               4\n",
+       "8      8                               3\n",
+       "9      9                               3"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "display(df_colores)\n",
-    "df2.nunique(axis=1, dropna=False).reset_index(name='')"
+    "display(df_colores.reset_index())\n",
+    "display(df2.nunique(axis=1).reset_index(name='Total por fila Excluyendo Null'))\n",
+    "display(df2.nunique(axis=1, dropna=False).reset_index(name='Total por fila Incluyendo Null'))"
    ]
   },
   {
