adicionado metodo para normalizar texto con acentos

--- a/Python/Notebooks/Code and Decode Morse Code.ipynb
+++ b/Python/Notebooks/Code and Decode Morse Code.ipynb
@@ -13,6 +13,14 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\QiDimMak\\AppData\\Local\\Temp\\ipykernel_1580\\3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "  from IPython.core.display import display, HTML\n"
+     ]
+    },
+    {
      "data": {
       "text/html": [
        "<style>.container { width:100% !important; }</style>"
@@ -46,21 +54,21 @@
     "def morse_dictionary() -> dict:\n",
     "    \n",
     "    MORSE_CODE_DICTIONARY = {'A':'.-', 'B':'-...', 'C':'-.-.',\n",
-    "                       'D':'-..', 'E':'.', 'F':'..-.', \n",
-    "                       'G':'--.', 'H':'....', 'I':'..', \n",
-    "                       'J':'.---', 'K':'-.-', 'L':'.-..', \n",
-    "                       'M':'--', 'N':'-.', 'Ñ':'--.--',\n",
-    "                       'O':'---', 'P':'.--.', 'Q':'--.-',\n",
-    "                       'R':'.-.', 'S':'...', 'T':'-',\n",
-    "                       'U':'..-', 'V':'...-', 'W':'.--',\n",
-    "                       'X':'-..-', 'Y':'-.--', 'Z':'--..',\n",
-    "                       '1':'.----', '2':'..---', '3':'...--',\n",
-    "                       '4':'....-', '5':'.....', '6':'-....',\n",
-    "                       '7':'--...', '8':'---..', '9':'----.',\n",
-    "                       '0':'-----', ', ':'--..--', '.':'.-.-.-',\n",
-    "                       '?':'..--..', ';':'−·−·−·','\"':'·−··−·',\n",
-    "                       '/':'-..-.', '-':'-....-','+':'·−·−·','*':'_.._',\n",
-    "                       '=':'−···−','(':'-.--.', ')':'-.--.-', ' ': '/'}\n",
+    "                           'D':'-..', 'E':'.', 'F':'..-.', \n",
+    "                           'G':'--.', 'H':'....', 'I':'..', \n",
+    "                           'J':'.---', 'K':'-.-', 'L':'.-..', \n",
+    "                           'M':'--', 'N':'-.', 'Ñ':'--.--',\n",
+    "                           'O':'---', 'P':'.--.', 'Q':'--.-',\n",
+    "                           'R':'.-.', 'S':'...', 'T':'-',\n",
+    "                           'U':'..-', 'V':'...-', 'W':'.--',\n",
+    "                           'X':'-..-', 'Y':'-.--', 'Z':'--..',\n",
+    "                           '1':'.----', '2':'..---', '3':'...--',\n",
+    "                           '4':'....-', '5':'.....', '6':'-....',\n",
+    "                           '7':'--...', '8':'---..', '9':'----.',\n",
+    "                           '0':'-----', ', ':'--..--', '.':'.-.-.-',\n",
+    "                           '?':'..--..', ';':'−·−·−·','\"':'·−··−·',\n",
+    "                           '/':'-..-.', '-':'-....-','+':'·−·−·','*':'_.._',\n",
+    "                           '=':'−···−','(':'-.--.', ')':'-.--.-', ' ': '/'}\n",
     "    \n",
     "    return MORSE_CODE_DICTIONARY"
    ]
@@ -116,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <center> Función que convierte texto normal en Código Morse</center> "
+    "# <center> Función que obtiene el texto sin acentos</center> "
    ]
   },
   {
@@ -125,8 +133,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def mormalizing_text(text: str) -> str:\n",
+    "    acentos = ['Á','É','Í','Ó','Ú']\n",
+    "    normales = ['A','E','I','O','U']\n",
+    "    \n",
+    "    for index, character in enumerate(acentos):\n",
+    "        \n",
+    "        text = text.upper().replace(character, normales[index])\n",
+    "        \n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <center> Función que convierte texto normal en Código Morse</center> "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def encode_text_to_morse_code(text: str) -> str:\n",
     "\n",
+    "    text = mormalizing_text(text)\n",
     "    morse_text = ''\n",
     "    for i in list(text):\n",
     "\n",
@@ -145,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,22 +223,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'. .-.. / -- --- -. --- / _.._ ...-- / . ... - .- / . -. / . .-.. / -... .- -. .- -. .- .-.. / -.-. --- -. / . .-.. / --.-- .- -. -.. ..- / - ..- .-. ..- .-. ..-'"
+       "'. .-.. / -- --- -. --- / _.._ ...-- / -.-- / -.. .. ...- .. -.. .. -.. --- / -..-. ...-- / . ... - .- / . -. / . .-.. / -... .- -. .- -. .- .-.. / -.-. --- -. / . .-.. / --.-- .- -. -.. ..- / - ..- .-. ..- .-. ..-'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "texto_en_morse = proccess_text('el mono *3 esta en el bananal con el ñandu tururu', True)\n",
+    "texto_en_morse = proccess_text('Él monó *3 y dividido /3 esta en el bananal con el ñandu tururu', True)\n",
     "texto_en_morse"
    ]
   },
@@ -218,16 +251,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'EL MONO *3 ESTA EN EL BANANAL CON EL ÑANDU TURURU'"
+       "'EL MONO *3 Y DIVIDIDO /3 ESTA EN EL BANANAL CON EL ÑANDU TURURU'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +272,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
