Update Code and Decode Morse Code.ipynb

--- a/Python/Notebooks/Code and Decode Morse Code.ipynb
+++ b/Python/Notebooks/Code and Decode Morse Code.ipynb
@@ -133,7 +133,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def mormalizing_text(text: str) -> str:\n",
+    "def get_normalized_text(text: str) -> str:\n",
     "    acentos = ['Á','É','Í','Ó','Ú']\n",
     "    normales = ['A','E','I','O','U']\n",
     "    \n",
@@ -159,7 +159,7 @@
    "source": [
     "def encode_text_to_morse_code(text: str) -> str:\n",
     "\n",
-    "    text = mormalizing_text(text)\n",
+    "    text = get_normalized_text(text)\n",
     "    morse_text = ''\n",
     "    for i in list(text):\n",
     "\n",
