--- a/Python/Notebooks/Code and Decode Morse Code.ipynb
+++ b/Python/Notebooks/Code and Decode Morse Code.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QiDimMak\\AppData\\Local\\Temp\\ipykernel_1580\\3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\QiDimMak\\AppData\\Local\\Temp\\ipykernel_7092\\3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -53,22 +53,24 @@
    "source": [
     "def morse_dictionary() -> dict:\n",
     "    \n",
-    "    MORSE_CODE_DICTIONARY = {'A':'.-', 'B':'-...', 'C':'-.-.',\n",
-    "                           'D':'-..', 'E':'.', 'F':'..-.', \n",
-    "                           'G':'--.', 'H':'....', 'I':'..', \n",
-    "                           'J':'.---', 'K':'-.-', 'L':'.-..', \n",
-    "                           'M':'--', 'N':'-.', 'Ñ':'--.--',\n",
-    "                           'O':'---', 'P':'.--.', 'Q':'--.-',\n",
-    "                           'R':'.-.', 'S':'...', 'T':'-',\n",
-    "                           'U':'..-', 'V':'...-', 'W':'.--',\n",
-    "                           'X':'-..-', 'Y':'-.--', 'Z':'--..',\n",
-    "                           '1':'.----', '2':'..---', '3':'...--',\n",
-    "                           '4':'....-', '5':'.....', '6':'-....',\n",
-    "                           '7':'--...', '8':'---..', '9':'----.',\n",
-    "                           '0':'-----', ', ':'--..--', '.':'.-.-.-',\n",
-    "                           '?':'..--..', ';':'−·−·−·','\"':'·−··−·',\n",
-    "                           '/':'-..-.', '-':'-....-','+':'·−·−·','*':'_.._',\n",
-    "                           '=':'−···−','(':'-.--.', ')':'-.--.-', ' ': '/'}\n",
+    "    MORSE_CODE_DICTIONARY = {\n",
+    "                               'A':'.-', 'B':'-...', 'C':'-.-.',\n",
+    "                               'D':'-..', 'E':'.', 'F':'..-.', \n",
+    "                               'G':'--.', 'H':'....', 'I':'..', \n",
+    "                               'J':'.---', 'K':'-.-', 'L':'.-..', \n",
+    "                               'M':'--', 'N':'-.', 'Ñ':'--.--',\n",
+    "                               'O':'---', 'P':'.--.', 'Q':'--.-',\n",
+    "                               'R':'.-.', 'S':'...', 'T':'-',\n",
+    "                               'U':'..-', 'V':'...-', 'W':'.--',\n",
+    "                               'X':'-..-', 'Y':'-.--', 'Z':'--..',\n",
+    "                               '1':'.----', '2':'..---', '3':'...--',\n",
+    "                               '4':'....-', '5':'.....', '6':'-....',\n",
+    "                               '7':'--...', '8':'---..', '9':'----.',\n",
+    "                               '0':'-----', ', ':'--..--', '.':'.-.-.-',\n",
+    "                               '?':'..--..', ';':'−·−·−·','\"':'·−··−·',\n",
+    "                               '/':'-..-.', '-':'-....-','+':'·−·−·','*':'_.._',\n",
+    "                               '=':'−···−','(':'-.--.', ')':'-.--.-', ' ': '/'\n",
+    "                            }\n",
     "    \n",
     "    return MORSE_CODE_DICTIONARY"
    ]
@@ -90,7 +92,13 @@
     "    \n",
     "    MORSE_CODE_DICTIONARY = morse_dictionary()\n",
     "    \n",
-    "    return  MORSE_CODE_DICTIONARY[key.upper()] if(key.upper() in MORSE_CODE_DICTIONARY) else key + \" -> Value  doesn't found\"    "
+    "    if key.upper() not in MORSE_CODE_DICTIONARY:\n",
+    "        try:\n",
+    "            raise ValueError('something went wrong')\n",
+    "        except ValueError as e:\n",
+    "            print(e, \" -> Value not found in dictionary\") # 👉️ \"something went wrong\"\n",
+    "            \n",
+    "    return  MORSE_CODE_DICTIONARY[key.upper()]"
    ]
   },
   {
@@ -117,7 +125,7 @@
     "        # obtengo el indice del valor en la lista para obtener la key \n",
     "        return key_list[val_list.index(value)]\n",
     "    else:\n",
-    "        return \"key doesn't found\"  "
+    "        raise(\"key doesn't found\")  "
    ]
   },
   {
@@ -222,8 +230,47 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# CON EXCEPCION"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "something went wrong  -> Value not found in dictionary\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'#'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn [9], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m texto_en_morse \u001b[38;5;241m=\u001b[39m \u001b[43mproccess_text\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mÉl monó *3 y dividido /3 esta en el bananal con el ñandu tururu#\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m texto_en_morse\n",
+      "Cell \u001b[1;32mIn [8], line 4\u001b[0m, in \u001b[0;36mproccess_text\u001b[1;34m(text, encrypt)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mproccess_text\u001b[39m(text: \u001b[38;5;28mstr\u001b[39m, encrypt: \u001b[38;5;28mbool\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;28mstr\u001b[39m:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m(encrypt):\n\u001b[1;32m----> 4\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43mencode_text_to_morse_code\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtext\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[0;32m      6\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m decode_morse_code_to_text(text)\n",
+      "Cell \u001b[1;32mIn [6], line 7\u001b[0m, in \u001b[0;36mencode_text_to_morse_code\u001b[1;34m(text)\u001b[0m\n\u001b[0;32m      4\u001b[0m morse_text \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mlist\u001b[39m(text):\n\u001b[1;32m----> 7\u001b[0m     morse_text \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[43mget_value_from_key\u001b[49m\u001b[43m(\u001b[49m\u001b[43mi\u001b[49m\u001b[43m)\u001b[49m \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      9\u001b[0m \u001b[38;5;66;03m# elimina el ultimo caracter en blanco del texto\u001b[39;00m\n\u001b[0;32m     10\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m morse_text[:\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]\n",
+      "Cell \u001b[1;32mIn [3], line 11\u001b[0m, in \u001b[0;36mget_value_from_key\u001b[1;34m(key)\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m e:\n\u001b[0;32m      9\u001b[0m         \u001b[38;5;28mprint\u001b[39m(e, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m -> Value not found in dictionary\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;66;03m# 👉️ \"something went wrong\"\u001b[39;00m\n\u001b[1;32m---> 11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m  \u001b[43mMORSE_CODE_DICTIONARY\u001b[49m\u001b[43m[\u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mupper\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m\n",
+      "\u001b[1;31mKeyError\u001b[0m: '#'"
+     ]
+    }
+   ],
+   "source": [
+    "texto_en_morse = proccess_text('Él monó *3 y dividido /3 esta en el bananal con el ñandu tururu#', True)\n",
+    "texto_en_morse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -232,7 +279,7 @@
        "'. .-.. / -- --- -. --- / _.._ ...-- / -.-- / -.. .. ...- .. -.. .. -.. --- / -..-. ...-- / . ... - .- / . -. / . .-.. / -... .- -. .- -. .- .-.. / -.-. --- -. / . .-.. / --.-- .- -. -.. ..- / - ..- .-. ..- .-. ..-'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +307,7 @@
        "'EL MONO *3 Y DIVIDIDO /3 ESTA EN EL BANANAL CON EL ÑANDU TURURU'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,6 +315,13 @@
    "source": [
     "proccess_text(texto_en_morse, False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
