adicionados nuevos caracteres al morse

--- a/Python/Notebooks/Code and Decode Morse Code.ipynb
+++ b/Python/Notebooks/Code and Decode Morse Code.ipynb
@@ -16,7 +16,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\QiDimMak\\AppData\\Local\\Temp\\ipykernel_7092\\3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
+      "C:\\Users\\QiDimMak\\AppData\\Local\\Temp\\ipykernel_17400\\3777615979.py:1: DeprecationWarning: Importing display from IPython.core.display is deprecated since IPython 7.14, please import from IPython display\n",
       "  from IPython.core.display import display, HTML\n"
      ]
     },
@@ -51,6 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://morsedecoder.com/es/\n",
     "def morse_dictionary() -> dict:\n",
     "    \n",
     "    MORSE_CODE_DICTIONARY = {\n",
@@ -66,8 +67,9 @@
     "                               '1':'.----', '2':'..---', '3':'...--',\n",
     "                               '4':'....-', '5':'.....', '6':'-....',\n",
     "                               '7':'--...', '8':'---..', '9':'----.',\n",
-    "                               '0':'-----', ', ':'--..--', '.':'.-.-.-',\n",
-    "                               '?':'..--..', ';':'−·−·−·','\"':'·−··−·',\n",
+    "                               '0':'-----', ',':'--..--', '.':'.-.-.-',\n",
+    "                               '?':'..--..', ';':'−·−·−·','\"':'·−··−·',\"'\":\".----.\",\n",
+    "                               '¿':'..-.-', '&':'.-...','¡':'--...-','!':'-.-.--',\n",
     "                               '/':'-..-.', '-':'-....-','+':'·−·−·','*':'_.._',\n",
     "                               '=':'−···−','(':'-.--.', ')':'-.--.-', ' ': '/'\n",
     "                            }\n",
@@ -269,8 +271,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# SIN EXCEPCION"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +288,7 @@
        "'. .-.. / -- --- -. --- / _.._ ...-- / -.-- / -.. .. ...- .. -.. .. -.. --- / -..-. ...-- / . ... - .- / . -. / . .-.. / -... .- -. .- -. .- .-.. / -.-. --- -. / . .-.. / --.-- .- -. -.. ..- / - ..- .-. ..- .-. ..-'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +316,7 @@
        "'EL MONO *3 Y DIVIDIDO /3 ESTA EN EL BANANAL CON EL ÑANDU TURURU'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,10 +327,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'!ESTAMOS EN EL ANO 2023, AL FINAL DEL ANO 2019 HUB UNA EPIDEMIA DE COVID-19, CASI TODO EL MUNDO ESTUVO ENCERRADO EN CASA EN EL ANO 2020, PERO AL FINAL LA ECONOMIA OBLIGO A QUE LA GENTE SALIERA Y LAS VACUNAS LLEGARON AHI MAS AAO MENOS A FIN DE 2020 Y COMIENZO DE 202'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "texto_en_morse = proccess_text('!estamos en el ano 2023, al final del ano 2019 hub una epidemia de covid-19, casi todo el mundo estuvo encerrado en casa en el ano 2020, pero al final la economia obligo a que la gente saliera y las vacunas llegaron ahi mas aao menos a fin de 2020 y comienzo de 202', True)\n",
+    "proccess_text(texto_en_morse, False)"
+   ]
   }
  ],
  "metadata": {
