--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -4452,6 +4452,57 @@
   },
   {
    "cell_type": "markdown",
+   "id": "155df078-6872-42e3-a436-7632917d7b52",
+   "metadata": {},
+   "source": [
+    "# <center> BUSCAR FRASE DENTRO DE TODOS LOS ARCHIVOS DE LA RAMA DEL REPOSITORIO</center>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "a7a6d86c-253d-4d47-b461-199354650c22",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep 83\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "addon.php:1679722183.321788 \n",
+      "calculos.c:1679722183.154431 \n",
+      "connection.java:1679722183.004691 \n",
+      "dataset.avro:1679722183.759946 \n",
+      "link.vs:1679722183.910261 \n",
+      "query.sql:1679722183.606891 \n",
+      "utils.gif:1679722183.459935 \n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git branch\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "* commit_branch\n",
+      "  main\n",
+      "  multi_commits\n",
+      "  utils\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "frase_a_buscar = 83\n",
+    "comando = 'git grep {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
+    "ejecutar_comando_git(comando)\n",
+    "ejecutar_comando_shell()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a635a5d2-fac3-4b87-a9da-9594d6ce2f5e",
    "metadata": {},
    "source": [
