adicionado ejemplos GREP

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -4460,9 +4460,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 145,
    "id": "a7a6d86c-253d-4d47-b461-199354650c22",
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [
@@ -4471,15 +4472,38 @@
      "output_type": "stream",
      "text": [
       "############################################# COMANDO A EJECUTAR #############################################\n",
-      "git grep 83\n",
+      "git grep Information\n",
       "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
-      "addon.php:1679722183.321788 \n",
-      "calculos.c:1679722183.154431 \n",
-      "connection.java:1679722183.004691 \n",
-      "dataset.avro:1679722183.759946 \n",
-      "link.vs:1679722183.910261 \n",
-      "query.sql:1679722183.606891 \n",
-      "utils.gif:1679722183.459935 \n",
+      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
+      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
+      "LICENSE:  The requirement to provide Installation Information does not include a\n",
+      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep -i Information\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
+      "LICENSE:procedures, authorization keys, or other information required to install\n",
+      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
+      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
+      "LICENSE:  The requirement to provide Installation Information does not include a\n",
+      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
+      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
+      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
+      "##############################################################################################################\n",
+      "\n",
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep -iw Information\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
+      "LICENSE:procedures, authorization keys, or other information required to install\n",
+      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
+      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
+      "LICENSE:  The requirement to provide Installation Information does not include a\n",
+      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
+      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
+      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
       "##############################################################################################################\n",
       "\n",
       "############################################# COMANDO A EJECUTAR #############################################\n",
@@ -4495,9 +4519,22 @@
     }
    ],
    "source": [
-    "frase_a_buscar = 83\n",
+    "frase_a_buscar = 'Information'\n",
+    "\n",
+    "# la busqueda es sensible al caso\n",
     "comando = 'git grep {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
     "ejecutar_comando_git(comando)\n",
+    "\n",
+    "# busca mayusculas y minusculas\n",
+    "comando = 'git grep -i {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
+    "ejecutar_comando_git(comando)\n",
+    "\n",
+    "\n",
+    "# busca la palabra sola sin mezcla, que no sea prefijo o sufijo, los simbolos no bloquean la busqueda\n",
+    "comando = 'git grep -iw {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
+    "ejecutar_comando_git(comando)\n",
+    "\n",
+    "\n",
     "ejecutar_comando_shell()"
    ]
   },
