divididos los ejemplos GREP

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -4459,8 +4459,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cb879e56-a3a4-437d-a1b8-cb24418bf231",
+   "metadata": {},
+   "source": [
+    "### BUSQUEDA SENSIBLE AL CASO"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 159,
    "id": "a7a6d86c-253d-4d47-b461-199354650c22",
    "metadata": {
     "scrolled": true,
@@ -4472,38 +4480,28 @@
      "output_type": "stream",
      "text": [
       "############################################# COMANDO A EJECUTAR #############################################\n",
-      "git grep Information\n",
+      "git grep 7\n",
       "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
-      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
-      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
-      "LICENSE:  The requirement to provide Installation Information does not include a\n",
-      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
-      "##############################################################################################################\n",
-      "\n",
-      "############################################# COMANDO A EJECUTAR #############################################\n",
-      "git grep -i Information\n",
-      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
-      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
-      "LICENSE:procedures, authorization keys, or other information required to install\n",
-      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
-      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
-      "LICENSE:  The requirement to provide Installation Information does not include a\n",
-      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
-      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
-      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
-      "##############################################################################################################\n",
-      "\n",
-      "############################################# COMANDO A EJECUTAR #############################################\n",
-      "git grep -iw Information\n",
-      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
-      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
-      "LICENSE:procedures, authorization keys, or other information required to install\n",
-      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
-      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
-      "LICENSE:  The requirement to provide Installation Information does not include a\n",
-      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
-      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
-      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
+      "Dockerfile:1679722182.502817 \n",
+      "LICENSE:                       Version 3, 29 June 2007\n",
+      "LICENSE: Copyright (C) 2007 Free Software Foundation, Inc. <https://fsf.org/>\n",
+      "LICENSE:non-permissive terms added in accord with section 7 apply to the code;\n",
+      "LICENSE:    7.  This requirement modifies the requirement in section 4 to\n",
+      "LICENSE:    License will therefore apply, along with any applicable section 7\n",
+      "LICENSE:  7. Additional Terms.\n",
+      "LICENSE:or that patent license was granted, prior to 28 March 2007.\n",
+      "LICENSE:  17. Interpretation of Sections 15 and 16.\n",
+      "Manifest.yaml:1679722182.630345 \n",
+      "addon.php:1679722183.321788 \n",
+      "calculos.c:1679722183.154431 \n",
+      "connection.java:1679722183.004691 \n",
+      "dataset.avro:1679722183.759946 \n",
+      "imagen.png:1679722182.753655 \n",
+      "info.txt:1679722182.365134 \n",
+      "link.vs:1679722183.910261 \n",
+      "main.py:1679722182.887059 \n",
+      "query.sql:1679722183.606891 \n",
+      "utils.gif:1679722183.459935 \n",
       "##############################################################################################################\n",
       "\n",
       "############################################# COMANDO A EJECUTAR #############################################\n",
@@ -4519,23 +4517,222 @@
     }
    ],
    "source": [
-    "frase_a_buscar = 'Information'\n",
+    "frase_a_buscar = '7'\n",
     "\n",
     "# la busqueda es sensible al caso\n",
     "comando = 'git grep {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
     "ejecutar_comando_git(comando)\n",
     "\n",
+    "ejecutar_comando_shell()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3c4a0b49-2893-4710-aae6-56a9022bdc9c",
+   "metadata": {},
+   "source": [
+    "### BUSQUEDA NO SENSIBLE AL CASO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "id": "37475ec6-cf8a-4b59-b421-ab8e7169512f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep -i Information\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
+      "LICENSE:procedures, authorization keys, or other information required to install\n",
+      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
+      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
+      "LICENSE:  The requirement to provide Installation Information does not include a\n",
+      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
+      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
+      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# busca mayusculas y minusculas\n",
     "comando = 'git grep -i {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
-    "ejecutar_comando_git(comando)\n",
-    "\n",
-    "\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e0f445f-4580-492f-8e43-85b3b0a6cba2",
+   "metadata": {},
+   "source": [
+    "### BUSQUEDA POR PALABRA ESPECIFICA"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "id": "ad9055a7-c026-4f33-9694-01767117ee3c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep -iw Information\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
+      "LICENSE:procedures, authorization keys, or other information required to install\n",
+      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
+      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
+      "LICENSE:  The requirement to provide Installation Information does not include a\n",
+      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
+      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
+      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
     "# busca la palabra sola sin mezcla, que no sea prefijo o sufijo, los simbolos no bloquean la busqueda\n",
     "comando = 'git grep -iw {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
-    "ejecutar_comando_git(comando)\n",
-    "\n",
-    "\n",
-    "ejecutar_comando_shell()"
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07003e4c-9c59-4638-8e9c-9e7ba0da0afc",
+   "metadata": {},
+   "source": [
+    "### BUSQUEDA CON INTERVALO DE LINEAS POR ENCIMA Y POR DEBAJO DEL TEXTO A BUSCAR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "b0f80eb5-310a-45df-b20e-5ac839981d6b",
+   "metadata": {
+    "scrolled": true,
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep -i -C 2 Information\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "LICENSE-the only significant mode of use of the product.\n",
+      "LICENSE-\n",
+      "LICENSE:  \"Installation Information\" for a User Product means any methods,\n",
+      "LICENSE:procedures, authorization keys, or other information required to install\n",
+      "LICENSE-and execute modified versions of a covered work in that User Product from\n",
+      "LICENSE:a modified version of its Corresponding Source.  The information must\n",
+      "LICENSE-suffice to ensure that the continued functioning of the modified object\n",
+      "LICENSE-code is in no case prevented or interfered with solely because\n",
+      "--\n",
+      "LICENSE-fixed term (regardless of how the transaction is characterized), the\n",
+      "LICENSE-Corresponding Source conveyed under this section must be accompanied\n",
+      "LICENSE:by the Installation Information.  But this requirement does not apply\n",
+      "LICENSE-if neither you nor any third party retains the ability to install\n",
+      "LICENSE-modified object code on the User Product (for example, the work has\n",
+      "LICENSE-been installed in ROM).\n",
+      "LICENSE-\n",
+      "LICENSE:  The requirement to provide Installation Information does not include a\n",
+      "LICENSE-requirement to continue to provide support service, warranty, or updates\n",
+      "LICENSE-for a work that has been modified or installed by the recipient, or for\n",
+      "--\n",
+      "LICENSE-protocols for communication across the network.\n",
+      "LICENSE-\n",
+      "LICENSE:  Corresponding Source conveyed, and Installation Information provided,\n",
+      "LICENSE-in accord with this section must be in a format that is publicly\n",
+      "LICENSE-documented (and with an implementation available to the public in\n",
+      "--\n",
+      "LICENSE-    along with this program.  If not, see <https://www.gnu.org/licenses/>.\n",
+      "LICENSE-\n",
+      "LICENSE:Also add information on how to contact you by electronic and paper mail.\n",
+      "LICENSE-\n",
+      "LICENSE-  If the program does terminal interaction, make it output a short\n",
+      "--\n",
+      "LICENSE-  You should also get your employer (if you work as a programmer) or school,\n",
+      "LICENSE-if any, to sign a \"copyright disclaimer\" for the program, if necessary.\n",
+      "LICENSE:For more information on this, and how to apply and follow the GNU GPL, see\n",
+      "LICENSE-<https://www.gnu.org/licenses/>.\n",
+      "LICENSE-\n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# divide el texto y muestra con C cuantas lineas detexto por debajo y por encima existe al filtrar la palabra deseada\n",
+    "comando = 'git grep -i -C 2 {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
+    "ejecutar_comando_git(comando)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "da376f7d-0d00-4978-8e48-eb8aeb78a212",
+   "metadata": {},
+   "source": [
+    "### MOSTRAR EL ARCHIVO Y EL NUMERO DE LA LINEA DONDE ESTA EL TEXTO BUSCADO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "id": "a9936806-0069-421b-a638-a55497c4df8d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "############################################# COMANDO A EJECUTAR #############################################\n",
+      "git grep -i -n 7\n",
+      "####################################### RESULTADO DE COMANDO EJECUTADO #######################################\n",
+      "Dockerfile:1:1679722182.502817 \n",
+      "LICENSE:2:                       Version 3, 29 June 2007\n",
+      "LICENSE:4: Copyright (C) 2007 Free Software Foundation, Inc. <https://fsf.org/>\n",
+      "LICENSE:201:non-permissive terms added in accord with section 7 apply to the code;\n",
+      "LICENSE:219:    7.  This requirement modifies the requirement in section 4 to\n",
+      "LICENSE:224:    License will therefore apply, along with any applicable section 7\n",
+      "LICENSE:343:  7. Additional Terms.\n",
+      "LICENSE:534:or that patent license was granted, prior to 28 March 2007.\n",
+      "LICENSE:612:  17. Interpretation of Sections 15 and 16.\n",
+      "Manifest.yaml:1:1679722182.630345 \n",
+      "addon.php:1:1679722183.321788 \n",
+      "calculos.c:1:1679722183.154431 \n",
+      "connection.java:1:1679722183.004691 \n",
+      "dataset.avro:1:1679722183.759946 \n",
+      "imagen.png:1:1679722182.753655 \n",
+      "info.txt:1:1679722182.365134 \n",
+      "link.vs:1:1679722183.910261 \n",
+      "main.py:1:1679722182.887059 \n",
+      "query.sql:1:1679722183.606891 \n",
+      "utils.gif:1:1679722183.459935 \n",
+      "##############################################################################################################\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "comando = 'git grep -i -n {frase_a_buscar}'.format(frase_a_buscar=frase_a_buscar)\n",
+    "ejecutar_comando_git(comando)"
    ]
   },
   {
