--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -380,6 +380,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a612d868-9609-43c9-a072-39faafbc550d",
+   "metadata": {},
+   "source": [
+    "# <center> FLUJO ENTRE RAMAS DE UN REPOSITORIO GIT</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "81157327-0900-4c45-a2ff-3d96ab217782",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "<center>\n",
+    "    <img width=\"100%\" align=\"center\" src=\"git_flow.png\">\n",
+    "</center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa61c53e-ae72-4628-9e93-bee20b030697",
    "metadata": {},
    "source": [
