descripcion flujo git

--- a/comandos GIT/Fundamentos GIT.ipynb
+++ b/comandos GIT/Fundamentos GIT.ipynb
@@ -383,7 +383,7 @@
    "id": "a612d868-9609-43c9-a072-39faafbc550d",
    "metadata": {},
    "source": [
-    "# <center> FLUJO ENTRE RAMAS DE UN REPOSITORIO GIT</center>"
+    "# <center> FLUJO DE INFORMACION ENTRE RAMAS DE UN REPOSITORIO GIT</center>"
    ]
   },
   {
